History: UI: Toolbar button sizes Fixes common part of http://bugs.activestate.com/show_bug.cgi?id=81746 "History nav buttons too large" r=trentm
(integrated from komodo (trunk) change 26129 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@2892 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/toolbar.p.css
+++ b/src/chrome/komodo/skin/toolbar.p.css
@@ -458,3 +458,32 @@ menuitem.history-nav-current {
 #historyRecentLocations > label {
   display : none;
 }
+
+toolbar #historyBackButton {
+  list-style-image: url("chrome://komodo/skin/images/browser_buttons.png");
+  -moz-image-region: rect(0px 16px 16px 0px);
+}
+/* rect(top,right,bottom,left) */
+toolbar #historyBackButton:not([disabled="true"]):hover {
+  -moz-image-region: rect(0px 16px 16px 0px);
+}
+toolbar #historyBackButton[disabled="true"] {
+  -moz-image-region: rect(32px 16px 48px 0px) !important;
+}
+toolbar #historyBackButton:not([disabled="true"]):hover,
+toolbar #historyBackButton:not([disabled="true"]):hover:active {
+  -moz-image-region: rect(16px 16px 32px 0px);
+}
+
+toolbar #historyForwardButton {
+  list-style-image: url("chrome://komodo/skin/images/browser_buttons.png");
+  -moz-image-region: rect(0px 32px 16px 16px);
+}
+toolbar #historyForwardButton:not([disabled="true"]):hover,
+toolbar #historyForwardButton:not([disabled="true"]):hover:active {
+  -moz-image-region: rect(16px 32px 32px 16px);
+}
+toolbar #historyForwardButton[disabled="true"] {
+  -moz-image-region: rect(32px 32px 48px 16px) !important;
+}
+
